<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tinydir_vendor</name>
  <version>1.1.1</version>
  <description>CMake shim over tinydir: https://github.com/cxong/tinydir/</description>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <maintainer email="steven@openrobotics.org">Steven! Ragnarök</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
